--- a/_studies/2021-12-23-10.1007_s11154-021-09693-7.md
+++ b/_studies/2021-12-23-10.1007_s11154-021-09693-7.md
@@ -5,7 +5,7 @@ authors:       'Bilezikian, JP, Formenti, AM, Adler, RA, et al.'
 status:        default
 en:
   subtitle:    'Vitamin D: Dosing, levels, form, and route of administration: Does one approach fit all?'
-  description: 'The 4th International Conference on Controversies in Vitamin D was held as a virtual meeting in September, 2020, gathering together leading international scientific and medical experts in vitamin D. Since vitamin D has a crucial role in skeletal and extra-skeletal systems, the aim of the Conference was to discuss improved management of vitamin D dosing, therapeutic levels and form or route of administration in the general population and in different clinical conditions. A tailored approach, based on the specific mechanisms underlying vitamin D deficiency in different diseases that were discussed, was recommended. Specifically, in comparison to healthy populations, higher levels of vitamin D and greater amounts of vitamin D were deemed necessary in osteoporosis, diabetes mellitus, obesity (particularly after bariatric surgery), and in those treated with glucocorticoids. Emerging and still open issues were related to target vitamin D levels and the role of vitamin D supplementation in COVID-19 since low vitamin D may predispose to SARS-CoV-2 infection and to worse COVID-19 outcomes. Finally, whereas oral daily cholecalciferol appears to be the preferred choice for vitamin D supplementation in the general population, and in most clinical conditions, active vitamin D analogs may be indicated in patients with hypoparathyroidism and severe kidney and liver insufficiency. Parenteral vitamin D administration could be helpful in malabsorption syndromes or in states of vitamin D resistance. Specific guidelines for desired levels of vitamin D should be tailored to the different conditions affecting vitamin D metabolism with the goal to define disease-specific normative values.''
+  description: 'The 4th International Conference on Controversies in Vitamin D was held as a virtual meeting in September, 2020, gathering together leading international scientific and medical experts in vitamin D. Since vitamin D has a crucial role in skeletal and extra-skeletal systems, the aim of the Conference was to discuss improved management of vitamin D dosing, therapeutic levels and form or route of administration in the general population and in different clinical conditions. A tailored approach, based on the specific mechanisms underlying vitamin D deficiency in different diseases that were discussed, was recommended. Specifically, in comparison to healthy populations, higher levels of vitamin D and greater amounts of vitamin D were deemed necessary in osteoporosis, diabetes mellitus, obesity (particularly after bariatric surgery), and in those treated with glucocorticoids. Emerging and still open issues were related to target vitamin D levels and the role of vitamin D supplementation in COVID-19 since low vitamin D may predispose to SARS-CoV-2 infection and to worse COVID-19 outcomes. Finally, whereas oral daily cholecalciferol appears to be the preferred choice for vitamin D supplementation in the general population, and in most clinical conditions, active vitamin D analogs may be indicated in patients with hypoparathyroidism and severe kidney and liver insufficiency. Parenteral vitamin D administration could be helpful in malabsorption syndromes or in states of vitamin D resistance. Specific guidelines for desired levels of vitamin D should be tailored to the different conditions affecting vitamin D metabolism with the goal to define disease-specific normative values.'
   tags:        [vitamin D, bone, COVID-19, extraskeletal effects, obesity, parathyroid hormone]
 de:
   subtitle:    'Vitamin D: Dosierung, Menge, Form und Art der Verabreichung: Ist ein Ansatz für alle geeignet?'
