--- a/_studies/2022-02-01-10.1007-s10882-022-09836-x.md
+++ b/_studies/2022-02-01-10.1007-s10882-022-09836-x.md
@@ -1,32 +1,16 @@
 ---
-date: 2022-02-01
-##
-title:    Cogent 
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors: 'Abasıyanık, Z, Kurt, M, Kahraman, T'
-##
-status:   default
-##
+date:          2022-02-01
+title:         Cogent
+authors:       'Abasıyanık, Z, Kurt, M, Kahraman, T'
+status:        default
 en:
-  subtitle:   'COVID-19 and Physical Activity Behaviour in People with Neurological Diseases: A Systematic Review'
-  ##
+  subtitle:    'COVID-19 and Physical Activity Behaviour in People with Neurological Diseases: A Systematic Review'
   description: 'The COVID-19 pandemic has led to a radical lifestyle change, which may unintendedly change physical activity levels. We aimed to perform a systematic review to investigate the physical activity changes in people with neurological diseases, and to examine the relationship between physical activity and disease symptoms, and psychosocial factors. The review was performed in accordance with the Preferred Reporting Items for Systematic Reviews and Meta-Analyses (PRISMA) statement. A systematic search of the literature across five databases (PubMed, CINAHL, Web of Science, SCOPUS, and Cochrane Library) was carried out using the keywords relating to COVID-19, physical activity, sedentary behaviour, exercise, and the name of the neurological diseases. The systematic search was updated on 4 February 2021 with the same keywords. Fourteen studies (n = 7662 persons with neurological diseases, n = 1663 healthy controls) were eligible for this review. The study populations were Parkinson disease (n = 7), dementia (n = 1), multiple sclerosis (n = 1), spinal cord injury (n = 1), hereditary spastic paraplegia (n = 1), neuromuscular diseases (n = 1), Charcot-Marie-Tooth neuropathy (n = 1), and epilepsy (n = 1). Thirteen studies reported a decreased physical activity level, one study reported a high interruption rate of physiotherapy/rehabilitation. Furthermore, the physical activity reduction was associated with worse disease symptoms, depression, perceived health, and mental and physical components of quality of life. The COVID-19 pandemic has a negative impact on the physical activity levels of people with neurological diseases, and this change was related to the worsening of disease symptoms and psychosocial factors. '
-  ## 
-  tags:    [physical activity, sedentary behaviour, exercise, neurological disease]
-## 
-de: 
-  ##
-  subtitle:   'COVID-19 und Bewegungsverhalten bei Menschen mit neurologischen Erkrankungen: Eine systematische Überprüfung'
-  ##
-  description: 'Die COVID-19-Pandemie hat zu einer radikalen Änderung des Lebensstils geführt, die möglicherweise unbeabsichtigt das Niveau der körperlichen Aktivität verändert. Unser Ziel war es, in einer systematischen Übersichtsarbeit die Veränderungen der körperlichen Aktivität bei Menschen mit neurologischen Erkrankungen zu untersuchen und den Zusammenhang zwischen körperlicher Aktivität und Krankheitssymptomen sowie psychosozialen Faktoren zu untersuchen. Die Untersuchung wurde in Übereinstimmung mit der PRISMA-Erklärung (Preferred Reporting Items for Systematic Reviews and Meta-Analyses) durchgeführt. Es wurde eine systematische Literaturrecherche in fünf Datenbanken (PubMed, CINAHL, Web of Science, SCOPUS und Cochrane Library) durchgeführt, wobei die Schlüsselwörter COVID-19, körperliche Aktivität, sitzende Tätigkeit, Bewegung und die Namen der neurologischen Erkrankungen verwendet wurden. Die systematische Suche wurde am 4. Februar 2021 mit denselben Stichworten aktualisiert. Vierzehn Studien (n = 7662 Personen mit neurologischen Erkrankungen, n = 1663 gesunde Kontrollen) kamen für diese Überprüfung in Frage. Bei den Studienpopulationen handelte es sich um Parkinson (n = 7), Demenz (n = 1), Multiple Sklerose (n = 1), Rückenmarksverletzungen (n = 1), hereditäre spastische Paraplegie (n = 1), neuromuskuläre Erkrankungen (n = 1), Charcot-Marie-Tooth-Neuropathie (n = 1) und Epilepsie (n = 1). Dreizehn Studien berichteten über einen Rückgang der körperlichen Aktivität, eine Studie über eine hohe Unterbrechungsrate der Physiotherapie/Rehabilitation. Darüber hinaus war die Verringerung der körperlichen Aktivität mit einer Verschlechterung der Krankheitssymptome, der Depression, der wahrgenommenen Gesundheit und der geistigen und körperlichen Komponenten der Lebensqualität verbunden. Die COVID-19-Pandemie wirkt sich negativ auf das körperliche Aktivitätsniveau von Menschen mit neurologischen Erkrankungen aus, und diese Veränderung stand im Zusammenhang mit der Verschlechterung von Krankheitssymptomen und psychosozialen Faktoren.'
-  ## 
-  ##
-  tags:     [körperliche Aktivität, sesshaftes Verhalten, Bewegung, neurologische Erkrankung]
-##
-group:  "Interventions"
-##
-credit:      https://doi.org/10.1007/s10882-022-09836-x
-##
-## 2020-09-30_10.1038_s41590-020-00808-x.md
+  tags:        [physical activity, sedentary behaviour, exercise, neurological disease]
+de:
+  subtitle:    'COVID-19 und Bewegungsverhalten bei Menschen mit neurologischen Erkrankungen: Eine systematische Überprüfung'
+  description: 'Die COVID-19-Pandemie hat zu einer radikalen Änderung des Lebensstils geführt, die möglicherweise unbeabsichtigt das Niveau der körperlichen Aktivität verändert. Unser Ziel war es, in einer systematischen Übersichtsarbeit die Veränderungen der körperlichen Aktivität bei Menschen mit neurologischen Erkrankungen zu untersuchen und den Zusammenhang zwischen körperlicher Aktivität und Krankheitssymptomen sowie psychosozialen Faktoren zu untersuchen. Die Untersuchung wurde in Übereinstimmung mit der PRISMA-Erklärung (Preferred Reporting Items for Systematic Reviews and Meta-Analyses) durchgeführt. Es wurde eine systematische Literaturrecherche in fünf Datenbanken (PubMed, CINAHL, Web of Science, SCOPUS und Cochrane Library) durchgeführt, wobei die Schlüsselwörter COVID-19, körperliche Aktivität, sitzende Tätigkeit, Bewegung und die Namen der neurologischen Erkrankungen verwendet wurden. Die systematische Suche wurde am 4. Februar 2021 mit denselben Stichworten aktualisiert. Vierzehn Studien (n = 7662 Personen mit neurologischen Erkrankungen, n = 1663 gesunde Kontrollen) kamen für diese Überprüfung in Frage. Bei den Studienpopulationen handelte es sich um Parkinson (n = 7), Demenz (n = 1), Multiple Sklerose (n = 1), Rückenmarksverletzungen (n = 1), hereditäre spastische Paraplegie (n = 1), neuromuskuläre Erkrankungen (n = 1), Charcot-Marie-Tooth-Neuropathie (n = 1) und Epilepsie (n = 1). Dreizehn Studien berichteten über einen Rückgang der körperlichen Aktivität, eine Studie über eine hohe Unterbrechungsrate der Physiotherapie/Rehabilitation. Darüber hinaus war die Verringerung der körperlichen Aktivität mit einer Verschlechterung der Krankheitssymptome, der Depression, der wahrgenommenen Gesundheit und der geistigen und körperlichen Komponenten der Lebensqualität verbunden. Die COVID-19-Pandemie wirkt sich negativ auf das körperliche Aktivitätsniveau von Menschen mit neurologischen Erkrankungen aus, und diese Veränderung stand im Zusammenhang mit der Verschlechterung von Krankheitssymptomen und psychosozialen Faktoren.' 
+  tags:        [körperliche Aktivität, sesshaftes Verhalten, Bewegung, neurologische Erkrankung]
+group:         'Interventions'
+credit:        https://doi.org/10.1007/s10882-022-09836-x
 ---
