--- a/_studies/2022-02-02-10.21203-rs.3.rs-1290999-v1.md
+++ b/_studies/2022-02-02-10.21203-rs.3.rs-1290999-v1.md
@@ -1,32 +1,16 @@
 ---
-date: 2022-02-02
-##
-title:    Research Square 
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors: 'Manomaipiboon, A, Pholtawornkulchai, K, Pupipatpab, S, et al.'
-##
-status:   Preprint
-##
+date:          2022-02-02
+title:         Research Square
+authors:       'Manomaipiboon, A, Pholtawornkulchai, K, Pupipatpab, S, et al.'
+status:        Preprint
 en:
-  subtitle:   'Efficacy and safety of ivermectin in the treatment of mild-to-moderate COVID-19 infection: A randomized, double blind, placebo, controlled trial'
-  ##
+  subtitle:    'Efficacy and safety of ivermectin in the treatment of mild-to-moderate COVID-19 infection: A randomized, double blind, placebo, controlled trial'
   description: 'The emergent outbreak of coronavirus disease (COVID-19), caused by severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2), has emphasized the requirement for therapeutic opportunities to overcome this pandemic. Ivermectin is an antiparasitic drug that has shown to be effective against various agents, including SARS-CoV-2, and is under extensive research in clinical trials. In this randomized, double-blind, placebo-controlled trial among adult hospitalized patients with mild-to-moderate COVID-19, 72 patients (mean age 48.57 ± 14.80 years) were randomly assigned to either the ivermectin (n=36) or placebo (n=36) group, along with receiving standard care. The primary outcomes were a negative reverse transcription polymerase chain reaction (RT-PCR) result at day 7 and 14 of enrolment. The secondary outcomes were duration of hospitalization, frequency of clinical worsening, survival on day 28, and adverse events. At day 7 and 14, a negative RT-PCR result was not significantly different between the two groups. The other secondary outcomes were reported to be comparable. However, the time to resolution of many symptoms were shorter in the ivermectin group, albeit not significantly. No adverse events were reported. In conclusion, early symptomatic recovery was observed with no side effects after treatment with ivermectin and standard care in mild-to-moderate COVID-19 patients. '
-  ## 
-  tags:    [efficacy, Ivermectin, RT-PCR]
-## 
-de: 
-  ##
-  subtitle:   'Wirksamkeit und Sicherheit von Ivermectin bei der Behandlung einer leichten bis mittelschweren COVID-19-Infektion: Eine randomisierte, doppelblinde, placebokontrollierte Studie'
-  ##
-  description: 'Der Ausbruch der Coronavirus-Krankheit (COVID-19), die durch das schwere akute respiratorische Syndrom Coronavirus 2 (SARS-CoV-2) verursacht wird, hat den Bedarf an therapeutischen Möglichkeiten zur Bewältigung dieser Pandemie deutlich gemacht. Ivermectin ist ein Antiparasitikum, das sich als wirksam gegen verschiedene Erreger, einschließlich SARS-CoV-2, erwiesen hat und in klinischen Studien eingehend untersucht wird. In dieser randomisierten, doppelblinden, placebokontrollierten Studie an erwachsenen Krankenhauspatienten mit leichter bis mittelschwerer COVID-19-Erkrankung wurden 72 Patienten (Durchschnittsalter 48,57 ± 14,80 Jahre) nach dem Zufallsprinzip entweder der Ivermectin- (n=36) oder der Placebogruppe (n=36) zugewiesen, die zusätzlich zur Standardbehandlung behandelt wurden. Der primäre Endpunkt war ein negatives Ergebnis der reversen Transkriptions-Polymerase-Kettenreaktion (RT-PCR) am Tag 7 und 14 der Aufnahme. Die sekundären Endpunkte waren die Dauer des Krankenhausaufenthalts, die Häufigkeit der klinischen Verschlechterung, das Überleben am Tag 28 und unerwünschte Ereignisse. Am 7. und 14. Tag unterschied sich ein negatives RT-PCR-Ergebnis nicht signifikant zwischen den beiden Gruppen. Die anderen sekundären Ergebnisse waren den Berichten zufolge vergleichbar. Allerdings war die Zeit bis zum Abklingen vieler Symptome in der Ivermectin-Gruppe kürzer, wenn auch nicht signifikant. Es wurden keine unerwünschten Ereignisse gemeldet. Zusammenfassend lässt sich sagen, dass nach der Behandlung mit Ivermectin und der Standardbehandlung bei leichten bis mittelschweren COVID-19-Patienten eine frühe symptomatische Besserung ohne Nebenwirkungen beobachtet wurde. '
-  ## 
-  ##
-  tags:     [Wirksamkeit, Ivermectin, RT-PCR]
-##
-group:  "Treatments"
-##
-credit:      https://doi.org/10.21203/rs.3.rs-1290999/v1
-##
-## 2020-09-30_10.1038_s41590-020-00808-x.md
+  tags:        [efficacy, Ivermectin, RT-PCR]
+de:
+  subtitle:    'Wirksamkeit und Sicherheit von Ivermectin bei der Behandlung einer leichten bis mittelschweren COVID-19-Infektion: Eine randomisierte, doppelblinde, placebokontrollierte Studie'
+  description: 'Der Ausbruch der Coronavirus-Krankheit (COVID-19), die durch das schwere akute respiratorische Syndrom Coronavirus 2 (SARS-CoV-2) verursacht wird, hat den Bedarf an therapeutischen Möglichkeiten zur Bewältigung dieser Pandemie deutlich gemacht. Ivermectin ist ein Antiparasitikum, das sich als wirksam gegen verschiedene Erreger, einschließlich SARS-CoV-2, erwiesen hat und in klinischen Studien eingehend untersucht wird. In dieser randomisierten, doppelblinden, placebokontrollierten Studie an erwachsenen Krankenhauspatienten mit leichter bis mittelschwerer COVID-19-Erkrankung wurden 72 Patienten (Durchschnittsalter 48,57 ± 14,80 Jahre) nach dem Zufallsprinzip entweder der Ivermectin- (n=36) oder der Placebogruppe (n=36) zugewiesen, die zusätzlich zur Standardbehandlung behandelt wurden. Der primäre Endpunkt war ein negatives Ergebnis der reversen Transkriptions-Polymerase-Kettenreaktion (RT-PCR) am Tag 7 und 14 der Aufnahme. Die sekundären Endpunkte waren die Dauer des Krankenhausaufenthalts, die Häufigkeit der klinischen Verschlechterung, das Überleben am Tag 28 und unerwünschte Ereignisse. Am 7. und 14. Tag unterschied sich ein negatives RT-PCR-Ergebnis nicht signifikant zwischen den beiden Gruppen. Die anderen sekundären Ergebnisse waren den Berichten zufolge vergleichbar. Allerdings war die Zeit bis zum Abklingen vieler Symptome in der Ivermectin-Gruppe kürzer, wenn auch nicht signifikant. Es wurden keine unerwünschten Ereignisse gemeldet. Zusammenfassend lässt sich sagen, dass nach der Behandlung mit Ivermectin und der Standardbehandlung bei leichten bis mittelschweren COVID-19-Patienten eine frühe symptomatische Besserung ohne Nebenwirkungen beobachtet wurde. ' 
+  tags:        [Wirksamkeit, Ivermectin, RT-PCR]
+group:         'Treatments'
+credit:        https://doi.org/10.21203/rs.3.rs-1290999/v1
 ---
