--- a/_studies/2022-02-04-10.1016-j.lwt.2022.113154.md
+++ b/_studies/2022-02-04-10.1016-j.lwt.2022.113154.md
@@ -1,32 +1,16 @@
 ---
-date: 2022-02-04
-##
-title:    LWT 
-## Titel der Publikation, beispielweise The Lancet.
-##
-authors: 'Vishwakarma, S, Panigrahi, C, Barua, S, et al.'
-##
-status:   default
-##
+date:          2022-02-04
+title:         LWT
+authors:       'Vishwakarma, S, Panigrahi, C, Barua, S, et al.'
+status:        default
 en:
-  subtitle:   'Food nutrients as inherent sources of immunomodulation during COVID-19 pandemic'
-  ##
+  subtitle:    'Food nutrients as inherent sources of immunomodulation during COVID-19 pandemic'
   description: 'Severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) - a novel coronavirus has rapid spread, and caused community infection around the globe. During the absence of a vaccine, people focused more on an immunity-boosting diet and needed clear knowledge about immunity-boosting foods. However, after the vaccination drive, the importance of food as a natural source of immunomodulation cannot be neglected. So, the purpose of this review was to describe the role of vital nutrient in boosting immune system of body apart from other factors like adequate sleep, exercise, and low stress levels. Macrophages, neutrophils, natural killer cells, dendritic cells, B-cells, and T-cells are the important components having important role in maintaining immunity of the human body. The first four-act as the initial mediators of innate host defense, and the latter two produce antibodies for pathogen destruction. The review investigated vital nutrients like vitamin-C, A, E and D, iron, zinc, folic acid, probiotics, and prebiotics affecting these immune components in some extent. Fruits, vegetables, spices, herbs, seeds, nuts, cereals, millets, and superfoods like chlorella and spirulina are good sources of these nutrients. However, fortified foods, functional foods, encapsulated foods with bioactive compounds and plant-based foods have shown immense potential in boosting immunity against viral infections like COVID-19. Some clinical trials and retrospective cohort studies have shown reduction in the severity of COVID-19 patients with relation to plant-based diet, vitamin D and C doses, probiotic, and zinc salts application. '
-  ## 
-  tags:    [food, nutrients, immune components, vitamins, vitamin C, vitamin A, vitamin D, vitamin E, iron, zinc, folic acid, probiotics]
-## 
-de: 
-  ##
-  subtitle:   'Lebensmittel-Nährstoffe als inhärente Quellen der Immunmodulation während der COVID-19-Pandemie'
-  ##
-  description: 'Das schwere akute respiratorische Syndrom Coronavirus 2 (SARS-CoV-2) - ein neuartiges Coronavirus - hat sich rasch ausgebreitet und weltweit zu Gemeinschaftsinfektionen geführt. Als es noch keinen Impfstoff gab, konzentrierten sich die Menschen mehr auf eine immunitätssteigernde Ernährung und brauchten klares Wissen über immunitätssteigernde Lebensmittel. Nach der Impfkampagne darf jedoch die Bedeutung von Lebensmitteln als natürliche Quelle der Immunmodulation nicht vernachlässigt werden. Ziel dieser Übersichtsarbeit war es daher, die Rolle lebenswichtiger Nährstoffe bei der Stärkung des körpereigenen Immunsystems zu beschreiben, abgesehen von anderen Faktoren wie ausreichendem Schlaf, Bewegung und geringem Stress. Makrophagen, neutrophile Granulozyten, natürliche Killerzellen, dendritische Zellen, B-Zellen und T-Zellen sind die wichtigsten Komponenten, die eine wichtige Rolle bei der Aufrechterhaltung der Immunität des menschlichen Körpers spielen. Die ersten vier fungieren als erste Vermittler der angeborenen Wirtsabwehr, und die beiden letzteren produzieren Antikörper zur Zerstörung von Krankheitserregern. In der Übersichtsarbeit wurden lebenswichtige Nährstoffe wie Vitamin C, A, E und D, Eisen, Zink, Folsäure, Probiotika und Präbiotika untersucht, die diese Immunkomponenten in gewissem Maße beeinflussen. Obst, Gemüse, Gewürze, Kräuter, Samen, Nüsse, Getreide, Hirse und Superfoods wie Chlorella und Spirulina sind gute Quellen für diese Nährstoffe. Angereicherte Lebensmittel, funktionelle Lebensmittel, mit bioaktiven Stoffen verkapselte Lebensmittel und pflanzliche Lebensmittel haben jedoch ein immenses Potenzial zur Stärkung der Immunität gegen Virusinfektionen wie COVID-19 gezeigt. Einige klinische Studien und retrospektive Kohortenstudien haben gezeigt, dass sich der Schweregrad von COVID-19-Patienten in Verbindung mit einer pflanzlichen Ernährung, Vitamin-D- und -C-Dosen, Probiotika und Zinksalzen verringert.'
-  ## 
-  ##
-  tags:     [COVID-19, Lebensmittel, Nährstoffe, Immunkomponenten, Vitamine, Vitamin C, Vitamin A, Vitamin D, Vitamin E, Eisen, Zink, Folsäure, Probiotika]
-##
-group:  "Treatments"
-##
-credit:      https://doi.org/10.1016/j.lwt.2022.113154
-##
-## 2020-09-30_10.1038_s41590-020-00808-x.md
+  tags:        [food, nutrients, immune components, vitamins, vitamin C, vitamin A, vitamin D, vitamin E, iron, zinc, folic acid, probiotics]
+de:
+  subtitle:    'Lebensmittel-Nährstoffe als inhärente Quellen der Immunmodulation während der COVID-19-Pandemie'
+  description: 'Das schwere akute respiratorische Syndrom Coronavirus 2 (SARS-CoV-2) - ein neuartiges Coronavirus - hat sich rasch ausgebreitet und weltweit zu Gemeinschaftsinfektionen geführt. Als es noch keinen Impfstoff gab, konzentrierten sich die Menschen mehr auf eine immunitätssteigernde Ernährung und brauchten klares Wissen über immunitätssteigernde Lebensmittel. Nach der Impfkampagne darf jedoch die Bedeutung von Lebensmitteln als natürliche Quelle der Immunmodulation nicht vernachlässigt werden. Ziel dieser Übersichtsarbeit war es daher, die Rolle lebenswichtiger Nährstoffe bei der Stärkung des körpereigenen Immunsystems zu beschreiben, abgesehen von anderen Faktoren wie ausreichendem Schlaf, Bewegung und geringem Stress. Makrophagen, neutrophile Granulozyten, natürliche Killerzellen, dendritische Zellen, B-Zellen und T-Zellen sind die wichtigsten Komponenten, die eine wichtige Rolle bei der Aufrechterhaltung der Immunität des menschlichen Körpers spielen. Die ersten vier fungieren als erste Vermittler der angeborenen Wirtsabwehr, und die beiden letzteren produzieren Antikörper zur Zerstörung von Krankheitserregern. In der Übersichtsarbeit wurden lebenswichtige Nährstoffe wie Vitamin C, A, E und D, Eisen, Zink, Folsäure, Probiotika und Präbiotika untersucht, die diese Immunkomponenten in gewissem Maße beeinflussen. Obst, Gemüse, Gewürze, Kräuter, Samen, Nüsse, Getreide, Hirse und Superfoods wie Chlorella und Spirulina sind gute Quellen für diese Nährstoffe. Angereicherte Lebensmittel, funktionelle Lebensmittel, mit bioaktiven Stoffen verkapselte Lebensmittel und pflanzliche Lebensmittel haben jedoch ein immenses Potenzial zur Stärkung der Immunität gegen Virusinfektionen wie COVID-19 gezeigt. Einige klinische Studien und retrospektive Kohortenstudien haben gezeigt, dass sich der Schweregrad von COVID-19-Patienten in Verbindung mit einer pflanzlichen Ernährung, Vitamin-D- und -C-Dosen, Probiotika und Zinksalzen verringert.' 
+  tags:        [COVID-19, Lebensmittel, Nährstoffe, Immunkomponenten, Vitamine, Vitamin C, Vitamin A, Vitamin D, Vitamin E, Eisen, Zink, Folsäure, Probiotika]
+group:         'Treatments'
+credit:        https://doi.org/10.1016/j.lwt.2022.113154
 ---
