--- a/_studies/2022-02-06-researchgate_358386329.md
+++ b/_studies/2022-02-06-researchgate_358386329.md
@@ -1,16 +1,16 @@
 ---
-date:        2022-02-06
-title:       Researchgate
-authors:      'Kerr, L, Baldi, F, Barbosa Lôbo, R, et al.'
-status:       Preprint
+date:          2022-02-06
+title:         Researchgate
+authors:       'Kerr, L, Baldi, F, Barbosa Lôbo, R, et al.'
+status:        Preprint
 en:
   subtitle:    'Strictly regular use of ivermectin as prophylaxis for COVID-19 leads to a 90% reduction in COVID-19 mortality rate, in a dose-response manner: definitive results of a prospective observational study of a strictly controlled 223,128 population from a city-wide program in Southern Brazil.'
   description: 'Previously, we demonstrated that ivermectin use as prophylaxis for COVID-19 was associated with reductions in COVID-19 infection, hospitalization, and mortality rates, and in the risk of dying from COVID-19, irrespective of regularity and accumulated use of ivermectin, in an observational, prospectively obtained data from a strictly controlled city-wide program in a city in Southern Brazil (Itajaí, SC, Brazil) of medically-based, optional use of ivermectin as prophylaxis for COVID-19. In this study, our objective was to explore the data obtained from the program to evaluate whether the level of regularity of ivermectin use impacted in the reductions in these outcomes, aiming to determine if ivermectin showed a progressive dose-, regularity-response in terms of protection from COVID-19 and COVID-19 related outcomes. Non-use of ivermectin was associated with a 10-times increase in mortality risk and 7-times increased risk of dying from COVID-19, compared to strictly regular use of ivermectin in a prospectively collected, strictly controlled population. A progressive dose-response pattern was observed between level of ivermectin use and level of protection from COVID-19 related outcomes and consistent across different levels of ivermectin use.'
-  tags:     [COVID-19, SARS-CoV-2, ivermectin, prophylaxis, prevention, coronavirus]
-de: 
+  tags:        [COVID-19, SARS-CoV-2, ivermectin, prophylaxis, prevention, coronavirus]
+de:
   subtitle:    'Die regelmäßige Anwendung von Ivermectin zur Prophylaxe von COVID-19 führt zu einer 90%igen Reduktion der COVID-19-Sterblichkeitsrate in einem Dosis-Wirkungs-Verhältnis: endgültige Ergebnisse einer prospektiven Beobachtungsstudie an einer streng kontrollierten Population von 223.128 einem stadtweiten Programm in Südbrasilien.'
-  description: 'Zuvor hatten wir gezeigt, dass die Anwendung von Ivermectin zur Prophylaxe von COVID-19 mit einer Verringerung der COVID-19-Infektions-, Krankenhausaufenthalts- und Sterblichkeitsraten sowie des Risikos, an COVID-19 zu sterben, verbunden war, und zwar unabhängig von der Regelmäßigkeit und der Häufigkeit der Ivermectin-Anwendung. Dies wurde in einer prospektiven Beobachtungsstudie aus einem streng kontrollierten stadtweiten Programm in einer Stadt in Südbrasilien (Itajaí, SC, Brasilien) zur medizinisch begründeten, freiwilligen Anwendung von Ivermectin zur Prophylaxe von COVID-19 ermittelt. Ziel dieser Studie war es, die aus dem Programm gewonnenen Daten daraufhin zu untersuchen, ob der Grad der Regelmäßigkeit der Ivermectin-Anwendung einen Einfluss auf die Verringerung dieser Ergebnisse hatte, um festzustellen, ob Ivermectin eine progressive Dosis- und Regelmäßigkeitsreaktion in Bezug auf den Schutz vor COVID-19 und COVID-19-bezogenen Ergebnissen zeigte. Die Nichtanwendung von Ivermectin war mit einem 10-fachen Anstieg des Sterberisikos und einem 7-fachen Anstieg des Risikos, an COVID-19 zu sterben, verbunden, verglichen mit der streng regelmäßigen Anwendung von Ivermectin in einer prospektiv erhobenen, streng kontrollierten Population. Ein progressives Dosis-Wirkungs-Muster wurde zwischen dem Grad der Ivermectin-Anwendung und dem Grad des Schutz vor COVID-19-bedingten Ergebnissen und konsistent über verschiedene Stufen der Ivermectin-Anwendung.'
-  tags:     [COVID-19, SARS-CoV-2, Ivermectin, Prophylaxe, Prävention, Coronavirus]
-group:       "Treatments"
+  description: 'Zuvor hatten wir gezeigt, dass die Anwendung von Ivermectin zur Prophylaxe von COVID-19 mit einer Verringerung der COVID-19-Infektions-, Krankenhausaufenthalts- und Sterblichkeitsraten sowie des Risikos, an COVID-19 zu sterben, verbunden war, und zwar unabhängig von der Regelmäßigkeit und der Häufigkeit der Ivermectin-Anwendung. Dies wurde in einer prospektiven Beobachtungsstudie aus einem streng kontrollierten stadtweiten Programm in einer Stadt in Südbrasilien (Itajaí, SC, Brasilien) zur medizinisch begründeten, freiwilligen Anwendung von Ivermectin zur Prophylaxe von COVID-19 ermittelt. Ziel dieser Studie war es, die aus dem Programm gewonnenen Daten daraufhin zu untersuchen, ob der Grad der Regelmäßigkeit der Ivermectin-Anwendung einen Einfluss auf die Verringerung dieser Ergebnisse hatte, um festzustellen, ob Ivermectin eine progressive Dosis- und Regelmäßigkeitsreaktion in Bezug auf den Schutz vor COVID-19 und COVID-19-bezogenen Ergebnissen zeigte. Die Nichtanwendung von Ivermectin war mit einem 10-fachen Anstieg des Sterberisikos und einem 7-fachen Anstieg des Risikos, an COVID-19 zu sterben, verbunden, verglichen mit der streng regelmäßigen Anwendung von Ivermectin in einer prospektiv erhobenen, streng kontrollierten Population. Ein progressives Dosis-Wirkungs-Muster wurde zwischen dem Grad der Ivermectin-Anwendung und dem Grad des Schutz vor COVID-19-bedingten Ergebnissen und konsistent über verschiedene Stufen der Ivermectin-Anwendung.' 
+  tags:        [COVID-19, SARS-CoV-2, Ivermectin, Prophylaxe, Prävention, Coronavirus]
+group:         'Treatments'
 credit:        https://www.researchgate.net/publication/358386329
 ---
