--- a/_studies/2022-01-19-10.3390_ijerph19031108.md
+++ b/_studies/2022-01-19-10.3390_ijerph19031108.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Die COVID-19-Pandemie senkt das Aktivitätsverhalten von Patienten mit Herz-Kreislauf-Erkrankungen, Gesunden und Sportlern'
   description: 'Ziel des Artikels ist es, die Auswirkungen der durch die Coronavirus-Krankheit-2019 (COVID-19)-Pandemie verursachten Einschränkungen des sitzenden Lebensstils bei Patienten mit Herz-Kreislauf-Erkrankungen, gesunden Menschen und Sportlern zu beschreiben. In den medizinischen Datenbanken PubMed, Medline und Google Scholar wurde eine Übersicht über Studien erstellt, in denen die Auswirkungen der COVID-19-Beschränkungen auf Patienten mit Herz-Kreislauf-Erkrankungen, gesunde Personen und Sportler untersucht wurden. Die Überprüfung ergab, dass das aktive Verhalten von Patienten mit Herz-Kreislauf-Erkrankungen und vor allem von Herzinsuffizienz-Patienten deutlich abnahm, was sich in einer Verringerung der täglichen Schritte und der Anzahl der aktiven Stunden während der COVID-19-Pandemie zeigte. Diese Übersichtsarbeit zeigte auch eine signifikante Zunahme der Zeit, die in sitzender Tätigkeit verbracht wurde, und des Schlafs bei gesunden Personen. Schließlich wird berichtet, dass die Einschränkungen der COVID-19-Pandemie bei den Sportlern zu Trainingsunterbrechungen führten, die sich auf ihre Gesundheit auswirkten. Diese Zeiträume könnten auch zu einer Verringerung ihrer zukünftigen Leistungen führen. Aktiv zu bleiben und ein ausreichendes Maß an körperlicher Aktivität während der COVID-19-Pandemie aufrechtzuerhalten, ist für die Erhaltung der Gesundheit trotz der Quarantänebedingungen von entscheidender Bedeutung. Alternativen wie die Teilnahme an einer kardialen Fernrehabilitation für CVD-Patienten oder das Training zu Hause für gesunde Personen und Sportler können in Betracht gezogen werden, um ein regelmäßiges aktives Verhalten in diesem sanitären Kontext und bei möglichen künftigen Pandemien aufrechtzuerhalten. ' 
-  tags:        [COVID-19, Lockdown, kardiovaskuläre Erkrankungen, Detraining, sitzendes Verhalte]
+  tags:        [COVID-19, Lockdown, kardiovaskuläre Erkrankungen, Detraining, sitzendes Verhalten]
 group:         'Interventions'
 credit:        https://doi.org/10.3390/ijerph19031108
 ---
