--- a/_studies/2021-01-30-10.3390_nu13020462.md
+++ b/_studies/2021-01-30-10.3390_nu13020462.md
@@ -6,11 +6,11 @@ status:        default
 en:
   subtitle:    'Micronutrients, Phytochemicals and Mediterranean Diet: A Potential Protective Role against COVID-19 through Modulation of PAF Actions and Metabolism'
   description: 'The new coronavirus disease 2019 (COVID-19) pandemic is an emerging situation with high rates of morbidity and mortality, in the pathophysiology of which inflammation and thrombosis are implicated. The disease is directly connected to the nutritional status of patients and a well-balanced diet is recommended by official sources. Recently, the role of platelet activating factor (PAF) was suggested in the pathogenesis of COVID-19. In the present review several micronutrients (vitamin A, vitamin C, vitamin E, vitamin D, selenium, omega-3 fatty acids, and minerals), phytochemicals and Mediterranean diet compounds with potential anti-COVID activity are presented. We further underline that the well-known anti-inflammatory and anti-thrombotic actions of the investigated nutrients and/or holistic dietary schemes, such as the Mediterranean diet, are also mediated through PAF. In conclusion, there is no single food to prevent coronavirus Although the relationship between PAF and COVID-19 is not robust, a healthy diet containing PAF inhibitors may target both inflammation and thrombosis and prevent the deleterious effects of COVID-19. The next step is the experimental confirmation or not of the PAF-COVID-19 hypothesis. '
-  tags:        [platelet activating factor; thrombosis; inflammation; Mediterranean diet; PAF-inhibitors]
+  tags:        [platelet activating factor, thrombosis, inflammation, Mediterranean diet, PAF-inhibitors]
 de:
   subtitle:    'Mikronährstoffe, Phytochemikalien und mediterrane Ernährung: Eine mögliche Schutzfunktion gegen COVID-19 durch Modulation der PAF-Wirkung und des Stoffwechsels'
   description: 'Die neue Coronavirus-Pandemie 2019 (COVID-19) ist eine neue Situation mit hoher Morbidität und Mortalität, an deren Pathophysiologie Entzündung und Thrombose beteiligt sind. Die Krankheit steht in direktem Zusammenhang mit dem Ernährungszustand der Patienten, und eine ausgewogene Ernährung wird von offizieller Seite empfohlen. Kürzlich wurde die Rolle des plättchenaktivierenden Faktors (PAF) bei der Pathogenese von COVID-19 vermutet. In der vorliegenden Übersicht werden verschiedene Mikronährstoffe (Vitamin A, Vitamin C, Vitamin E, Vitamin D, Selen, Omega-3-Fettsäuren und Mineralien), sekundäre Pflanzenstoffe und Verbindungen der mediterranen Ernährung mit potenzieller Anti-COVID-Aktivität vorgestellt. Wir betonen ferner, dass die bekannten entzündungshemmenden und antithrombotischen Wirkungen der untersuchten Nährstoffe und/oder ganzheitlichen Ernährungsformen wie der mediterranen Ernährung auch über PAF vermittelt werden. Obwohl der Zusammenhang zwischen PAF und COVID-19 nicht eindeutig ist, kann eine gesunde Ernährung mit PAF-Inhibitoren sowohl die Entzündung als auch die Thrombose bekämpfen und die schädlichen Auswirkungen von COVID-19 verhindern. Der nächste Schritt ist die experimentelle Bestätigung der PAF-COVID-19-Hypothese oder nicht.' 
-  tags:        [Thrombozyten-aktivierender Faktor; Thrombose; Entzündung; mediterrane Ernährung; PAF-Hemmer]
+  tags:        [Thrombozyten-aktivierender Faktor, Thrombose, Entzündung, mediterrane Ernährung, PAF-Hemmer]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/nu13020462
 ---
